# chameleon-gl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/include/: framebuffer_renderer.hpp  game_of_life_renderer.hpp  mesh_renderer.hpp  point_cloud_example_renderer.hpp  sdf_renderer.hpp  texture_renderer.hpp
examples/shaders/: sdf_shader.fs  simple_point_shader.fs  simple_shader.fs  simple_shader.vs  texture_shader.fs  texture_shader.vs
examples/src/: framebuffer_example.cpp  game_of_life_example.cpp  mesh_example.cpp  point_cloud_example.cpp  sdf_example.cpp  texture_example.cpp
include/: abstract_surface.hpp  chameleon_gl.hpp  clear_command.hpp  command.hpp  compute_command.hpp  draw_command.hpp  drawable.hpp  dummy_framebuffer.hpp  event_handler.hpp  gl_context.hpp  graphics_context.hpp  image_data.hpp  input.hpp  mesh.hpp  mesh_renderer.hpp  opengl_utils.hpp  point_cloud.hpp  render_state.hpp  renderer.hpp  sdf_renderer.hpp  sdl_helpers.hpp  shader.hpp  simple_renderer.h  simple_renderer.hpp  texture_renderer.hpp  uniform_map.hpp  util.hpp
shaders/: conway_shader.fs  sdf_shader.fs  sdf_shader.vs  simple_point_shader.fs  simple_shader.fs  simple_shader.vs  texture_shader.fs  texture_shader.vs
src/: input.cpp  main.cpp  simple_renderer.cpp
test/: main.cpp  test_shader.cpp
test/test_shaders/: shader_function_comments.glsl  shader_function_simple.glsl
